[package]
name = "kvs"
version = "0.1.0"
authors = ["zhou"]
description = "A key-value store"
edition = "2021"
[env]
RUST_BACKTRACE = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.6"
predicates = "2.1.2"
clap = {version = "4.0.22", features = ["derive"]}
tempfile = "3"
walkdir = "2.3.2"
failure = "0.1.8"
serde_json = "1.0"
serde = {version ="1.0", features = ["derive"] }